--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 				<div class="col-md-1"></div>
 
 				<div class="col-md-2">
-					<img src="assets/img/smallogo.svg">
+					<img id="smallLogo" src="assets/img/smallogo.svg">
 				</div>
 
 				<div class="col-md-4" id="menu">
@@ -44,6 +44,46 @@
 
 		<div class="container-fluid" >
 			<div class="row" >
+
+					<div class="container">
+					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner" role="listbox">
+		    <div class="item active">
+		      <img src="assets/img/smile.jpg" alt="happydog">
+		   </div>
+
+		    <div class="item">
+		      <img src="assets/img/dogcat.jpg" alt="dog and cat">
+		    </div>
+
+		   <div class="item">
+			 <img src="assets/img/dog2.jpg" alt="dog">
+			</div>
+
+		  </div>
+
+		  <!-- Controls -->
+		  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+		</div>
+
+		
+
 				<div class="col-md-1"></div>
 				<div class="col-md-4" id="divtxt">
 
@@ -51,6 +91,11 @@
 					<p class="mainbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat nulla et enim dapibus vestibulum. Morbi luctus ornare ante lacinia egestas. Nam hendrerit diam dolor, sed blandit sem iaculis sed. Nam vitae elementum mauris. Suspendisse leo ex, laoreet sed lorem cursus, blandit tempor risus. Proin eget eros luctus, gravida velit ac, imperdiet eros. Pellentesque efficitur turpis quis leo blandit, quis tempor lectus vestibulum. Etiam non dictum enim. Donec augue sem, commodo vel elementum ut, sagittis in leo. Ut id ullamcorper dui. Sed interdum imperdiet neque, facilisis varius massa. Maecenas sollicitudin massa in augue dapibus auctor.
 
 					Praesent hendrerit eget est eu accumsan. Nunc finibus mi at ex tincidunt iaculis. Morbi sagittis pretium fringilla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis ante nisl, ullamcorper vitae est ac, aliquam iaculis nisi. Nullam tincidunt blandit dui, non eleifend sem commodo eget. Nulla et risus at libero scelerisque convallis non sed orci.</p><br/>
+
+					<div id="adoptionb">
+						<a href="#"><img src="assets/img/dogbutton.svg" alt="dog button"></a>
+						<a href="#"><img id="catbutton"src="assets/img/catbutton.svg" alt="cat button"></a>
+					</div>
 
 					<p class="mainbody">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat nulla et enim dapibus vestibulum. Morbi luctus ornare ante lacinia egestas. Nam hendrerit diam dolor, sed blandit sem iaculis sed. Nam vitae elementum mauris. Suspendisse leo ex, laoreet sed lorem cursus, blandit tempor risus. Proin eget eros luctus, gravida velit ac, imperdiet eros. Pellentesque efficitur turpis quis leo blandit, quis tempor lectus vestibulum. Etiam non dictum enim. Donec augue sem, commodo vel elementum ut, sagittis in leo. Ut id ullamcorper dui. Sed interdum imperdiet neque, facilisis varius massa. Maecenas sollicitudin massa in augue dapibus auctor.</p>
 				</div>
@@ -62,7 +107,6 @@
 					<img id="dog1" src="assets/img/dog1.jpg">
 					</div>
 				</div>
-
 				
 			</div>
 		</div>
