adoptions page done

--- a/public/adoption.html
+++ b/public/adoption.html
@@ -77,7 +77,7 @@
 									<li>$50 for cats and $100 for kittens.</li>
 									<li>Dog adoption fees range from $75 to $300.</li>
 									<li>The range of fees helps offset the price of housing some pets for extended periods of time.  We do not euthanize for time or space.</li>
-									</ul></p>
+									</ul></p> <hr>
 				</div>
 
 					<div id="adoptionb">
@@ -106,8 +106,8 @@
 				<div class="col-md-1"></div>
 
 				<div class="col-md-4">
-				<form>
-				<form class="form-horizontal mainbody">
+			
+				<form class="form-horizontal list">
 
 						<h1 class="title" style="text-align:center;">List a Pet</h1>
 						  <div class="form-group">
@@ -140,8 +140,56 @@
 
 						  </div></div>
 						</form>
-				</div>
-				</form>
+				
+					</div>
+
+				<div class="col-md-1"></div>	
+
+				<div class="col-md-4 mainbody2">
+					<form> <h1 class="title" style="text-align:center; color:white;">Find a Pet</h1>
+			<!--type of animal-->
+			<div class="form-group col-sm-3">
+				<label for="Type">Type</label>
+	   				 <select class="form-control">
+	   					  <option id="anyTypeOpt">Any</option>
+						  <option id="catOpt">Cat</option>
+						  <option id="dogOpt">Dog</option>
+					</select>
+  			</div>
+  			<!--Age-->
+  			<div class="form-group col-sm-4">
+   				 <label for="Age">Age</label>
+   				 <input type="text" class="form-control" id="ageOpt" placeholder="Age">
+  			</div>
+
+  			<!--Breed-->
+  			<div class="form-group col-sm-5">
+   				 <label for="Breed">Breed</label>
+   				 <input type="text" class="form-control" id="breedopt" placeholder="Breed">
+  			</div>
+
+  			<div class="form-group col-sm-4">
+   				 <label for="color">Color</label>
+   				 <input type="text" class="form-control" id="colorOpt" placeholder="Color">
+  			</div>
+
+  			<div class="form-group col-sm-3">
+				<label for="Sex">Sex</label>
+	   				 <select class="form-control">
+	   				 	  <option id="anySexOpt">Any</option>
+						  <option id="femOpt">Female</option>
+						  <option id="maleOpt">Male</option>
+					</select>
+  			</div>
+
+  			<div class="form-group col-sm-4">
+   				 <label for="Location">Location</label>
+   				 <input type="text" class="form-control" id="zipCode" placeholder="Zipcode">
+  			</div>
+
+  				<button type="submit" class="btn btn-default" id="searchB">Search</button>
+
+  				</form>	
 			</div>
 		</div>
 			
@@ -149,9 +197,9 @@
 
 		<div class="container-fluid" >
 			<div class="row" id="dg1" >
-				<div class="col-md-4"></div>
+				<div class="col-md-2"></div>
 
-				<div class="col-md-7">
+				<div class="col-md-8">
 					<img class="img-responsive" src="assets/img/dg1.svg">
 				</div>
 
@@ -171,6 +219,7 @@
 	            		 <img class="logo" src="assets/img/twitter.png">
 	            		 <img class="logo" src="assets/img/pinterest.png">
 	            </div>
+
 
 
 				   </div>
