--- a/public/homepage.html
+++ b/public/homepage.html
@@ -29,9 +29,9 @@
 				
 		 		 	
 		 		 	<!--links inside the page-->
-			  		<a class="menuItem" href="#">Adoption</a>
-			  		<a class="menuItem" href="#">Login</a>
-			  		<a class="menuItem" href="#">Donate</a>
+			  		<a class="menuItem" href="/adopt">Adoption</a>
+			  		<a class="menuItem" href="/login">Login</a>
+			  		<a class="menuItem" href="/donate">Donate</a>
 
 				</div>
 
@@ -116,15 +116,16 @@
 
 			<div class = "row">
 
-				<div class="col-md-1"></div>
+				<div class="col-md-1">
+				</div>
 				<div class="col-md-4">
 					<form class="form-horizontal list">
-						  <div class="form-group">
+						<div class="form-group">
 						    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
 						    <div class="col-sm-10">
 						      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
 						    </div>
-						  </div>
+						</div>
 						  <div class="form-group">
 						    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
 						    <div class="col-sm-10">
@@ -169,8 +170,6 @@
 	            </div>
 				   </div>
 		</div>
-	</div>
-</div>
 
 
 
