Add php and composer files

--- a/public/adoption.html
+++ b/public/adoption.html
@@ -25,13 +25,13 @@
 					<img id="smallLogo" src="assets/img/smallogo.svg">
 				</div>
 
-				<div class="col-md-4" id="menu">
+				<div class="col-md-6" id="menu">
 				
 		 		 	
 		 		 	<!--links inside the page-->
-			  		<a class="menuItem" href="#">Adoption</a>
-			  		<a class="menuItem" href="#">Login</a>
-			  		<a class="menuItem" href="#">Donate</a>
+			  		<a class="menuItem" href="/adopt">Adoption</a>
+			  		<a class="menuItem" href="/login">Login</a>
+			  		<a class="menuItem" href="/donate">Donate</a>
 
 				</div>
 
