changes in footer/html

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -12,7 +12,7 @@
 	<!--my css page linked-->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<title></title>
+	<title>Home</title>
 </head>
 <body>
 
@@ -57,10 +57,9 @@
 				<div class="col-md-4" id="divtxt">
 
 					<div class="mainbody">
-					<h1 id="about">About Us</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat nulla et enim dapibus vestibulum. Morbi luctus ornare ante lacinia egestas. Nam hendrerit diam dolor, sed blandit sem iaculis sed. Nam vitae elementum mauris. Suspendisse leo ex, laoreet sed lorem cursus, blandit tempor risus. Proin eget eros luctus, gravida velit ac, imperdiet eros. Pellentesque efficitur turpis quis leo blandit, quis tempor lectus vestibulum. Etiam non dictum enim. Donec augue sem, commodo vel elementum ut, sagittis in leo. Ut id ullamcorper dui. Sed interdum imperdiet neque, facilisis varius massa. Maecenas sollicitudin massa in augue dapibus auctor.
-
-					Praesent hendrerit eget est eu accumsan. Nunc finibus mi at ex tincidunt iaculis. Morbi sagittis pretium fringilla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis ante nisl, ullamcorper vitae est ac, aliquam iaculis nisi. Nullam tincidunt blandit dui, non eleifend sem commodo eget. Nulla et risus at libero scelerisque convallis non sed orci.</p><br/></div>
+					<h1 id="about">Our mission</h1>
+					<p>To use Internet technology and resources to provide adopters and adoptees a safe place to facilitate the adoption process of pets in need.  Our site provides animal lovers the ability to search for a new pet that best fits their family's needs from the comfort of their own home, all while supporting local shelters, rescues and individuals also in need. 
+					FurgotMeNot is an online, searchable database of animals in need of new homes. There are many sites on the web to aid families in locating a new furry family member. Our site provides users access to a directory of nearly 14,000 pets granted by the lists and directories updated daily by PetFinder.com.  However, our primary goal is to also provide an option for individual users and smaller adoption agencies the availability to add their pets in need as well.  Whether it is due to an illness, death in the family, financial crisis or so many other reasons, families often have to re-home a pet also.  This site allows them to list a pet in a safe environment dedicated solely to the safety and security of the pets listed on this site.  </p><br/></div>
 
 					<div id="adoptionb">
 						<a href="#"><img src="assets/img/dogbutton.svg" alt="dog button"></a>
@@ -130,13 +129,19 @@
 		<div class="container-fluid">			
 			<div class="row" id="footer">
 				<div class="col-md-2" >
-	            	<p id="footerP"> Follow Us</p></div>
+	            	<p id="footerP"> Follow Us</p>
 
-	            <div class="col-md-2" >
+	           
 	            		<img class="logo" src="assets/img/fb.png">
 	            		 <img class="logo" src="assets/img/instagram.png">
 	            		 <img class="logo" src="assets/img/twitter.png">
 	            		 <img class="logo" src="assets/img/pinterest.png">
+	            </div>
+
+	            <div class="col-md-8" id="disclaimer">
+	            	<p>DISCLAIMER
+						FurgotMeNot is a tool to assist Adopters, Organizations and Adoptees in the process of placing pets in need into the best forever homes.  The site is updated regularly, but unfortunately no information on our site can be guaranteed as it still requires user input for completed adoptions and pet availability. It is crucial that any pet found through an adoption service be thoroughly examined by a veterinarian immediately upon adoption. Any pets found, adopted through, or listed in FurgotMeNot are the sole responsibility of the adoption organizations and/or the adopting party.
+						FurgotMeNot accepts no responsibility for any liability or for any injury or damages to any person or property caused by any listed pet, as well as any cause of action, claims, suits or demands whatsoever that may arise as a result of such injury or damage.</p>
 	            </div>
 				   </div>
 		</div>
